trunk/Archive2/f3/f06c6a5a3715d0/output
main.cpp:1:1: error: use of undeclared identifier 'boost'
boost::optional<RayHit> onRayCast(const Ray& ray) override {
^
main.cpp:1:16: error: expected unqualified-id
boost::optional<RayHit> onRayCast(const Ray& ray) override {
               ^
main.cpp:21:9: error: unknown type name 'Vec3'
        Vec3<double> point;
        ^
main.cpp:21:13: error: expected unqualified-id
        Vec3<double> point;
            ^
main.cpp:22:9: error: unknown type name 'Vec3'
        Vec3<double> a, b;
        ^
main.cpp:22:13: error: expected unqualified-id
        Vec3<double> a, b;
            ^
main.cpp:23:9: error: unknown type name 'Vec3'
        Vec3<double> normal;
        ^
main.cpp:23:13: error: expected unqualified-id
        Vec3<double> normal;
            ^
8 errors generated.
